# AegisEdgeAI

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README-backup.md  README.md  SECURITY.md  blog.md  tasks.md  test-arm64-implementation.sh
.github/: PULL_REQUEST_TEMPLATE.md
bak/: attest.py  openTelemetry_project.txt  seal_unseal.sh
compliance_agent/: README.md  __init__.py  app.py  config.py  narrative_generator.py  pci_requirements.yaml  report_generator.py  requirements.txt  rule_auditor.py  rule_generator.py  rules_engine.py  scaffold_generator.py  setup_model.py
docs/: agentic-ai-chain.md  ai-safety-academia.md  ai-safety.md  arch-mod.md  arch.md  arm64-support.md  auditor.md  federated-jwt.md  governence.md  ptp-proof-of-proximity.md  zkp.md
edge-ai/: DEBUG_LOGGING.md  Dockerfile  README.md  README_DEMO.md  README_SCRIPTS.md  SCRIPTS_README.md  aa  ak.ctx  ak.pem  ak.pub  app.ctx  app.priv  app.pub  app_certify.out  app_certify.sig  appsig_cert.sig  appsig_info.hash  appsk_pub.pem  appsk_pubkey.pem  appsk_quote.msg  appsk_quote.sig  attester.py  cleanup_all_agents.sh  config.py  create_agent.py  debug_signature.py  delete_agent.py  demo  digest.ticket  docker-compose.yml  ek-allowlist-create.md  ek.ctx  ek.der  ek.pub  ek_allowlist.txt  env.example  generate_app_quote.sh  generate_verify_app_quote.sh  get_public_key_app.sh  initall.sh  (+33 more)
hybrid-cloud-poc working/enterprise-private-cloud/wasm-plugin/: Cargo.toml
hybrid-cloud-poc working/enterprise-private-cloud/wasm-plugin/src/: lib.rs
(+904 files in other folders)
