[package]
name = "sensor-verification-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
proxy-wasm = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
x509-parser = "0.18"
base64 = { version = "0.21", default-features = false, features = ["alloc"] }

[profile.release]
opt-level = "z"
lto = true
strip = true

